--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="dist/bundle.js"></script>
     <title>Document</title>
 </head>
 <body>
-    
+    Hello, webpack !
+    <p id="id-greeting"></p>
 </body>
 </html>
